# rag-experiments

./: .env  .pylintrc  README.md  main.py  pyproject.toml
app/: __init__.py
app/lib/: constants.py
app/pkg/document_loaders/: __init__.py
app/pkg/llms/: local_seldon_wrapper.py
app/pkg/neo4j/: credentials.py  vector.py
app/pkg/vectorstores/: qdrant.py
data/: Shredding_service.html
