[tool.poetry]
name = "rag-experiments"
version = "0.1.0"
description = "Knowledge graph creation for RAG"
authors = ["Harsh Shekhar <harsh.shekhar@hitachivantara.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
llama-index = "^0.10.43"
environs = "^11.0.0"
langchain = "^0.2.2"
langchain-community = "^0.2.3"
unstructured = {extras = ["pdf"], version = "^0.14.4"}
neo4j = "^5.20.0"
llama-index-vector-stores-neo4jvector = "^0.1.4"
llama-index-graph-stores-neo4j = "^0.2.4"
llama-index-vector-stores-qdrant = "^0.2.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
